[gd_scene load_steps=3 format=3 uid="uid://dgf3bu8ydx0x2"]

[ext_resource type="PackedScene" uid="uid://cfccds4gmwkda" path="res://actors/ships/engines/engine/engine.tscn" id="1_cd2od"]
[ext_resource type="Script" path="res://actors/ships/engines/engines.gd" id="1_ulr3q"]

[node name="Engines" type="Node3D"]
script = ExtResource("1_ulr3q")

[node name="EngineRearL" parent="." instance=ExtResource("1_cd2od")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1.806)

[node name="EngineRearR" parent="." instance=ExtResource("1_cd2od")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1.806)

[node name="EngineFrontL" parent="." instance=ExtResource("1_cd2od")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0, -0.194)

[node name="EngineFrontR" parent="." instance=ExtResource("1_cd2od")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 0, -0.194)
